--- a/ANN-Churn-Prediction/Prediction using ANN.ipynb
+++ b/ANN-Churn-Prediction/Prediction using ANN.ipynb
@@ -19,11 +19,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From e:\\UDemy Final\\ANN Classification\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
+      "2025-03-14 19:42:14.004320: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-03-14 19:42:14.036162: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-03-14 19:42:14.114094: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1741981334.209674   19686 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1741981334.247595   19686 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1741981334.325262   19686 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1741981334.325292   19686 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1741981334.325296   19686 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1741981334.325299   19686 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-03-14 19:42:14.340127: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -48,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-14 19:42:26.580341: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
    "source": [
     "### Load the trained model, scaler pickle,onehot\n",
     "model=load_model('model.h5')\n",
@@ -79,18 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example input data\n",
     "input_data = {\n",
-    "    'CreditScore': 600,\n",
+    "    'CreditScore': 900,\n",
     "    'Geography': 'France',\n",
     "    'Gender': 'Male',\n",
-    "    'Age': 40,\n",
+    "    'Age': 25,\n",
     "    'Tenure': 3,\n",
-    "    'Balance': 60000,\n",
+    "    'Balance': 90000,\n",
     "    'NumOfProducts': 2,\n",
     "    'HasCrCard': 1,\n",
     "    'IsActiveMember': 1,\n",
@@ -107,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\UDemy Final\\ANN Classification\\venv\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -160,7 +179,7 @@
        "0               1.0                0.0              0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -220,12 +239,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>600</td>\n",
+       "      <td>900</td>\n",
        "      <td>France</td>\n",
        "      <td>Male</td>\n",
-       "      <td>40</td>\n",
+       "      <td>25</td>\n",
        "      <td>3</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>90000</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -237,13 +256,13 @@
       ],
       "text/plain": [
        "   CreditScore Geography Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
-       "0          600    France   Male   40       3    60000              2   \n",
+       "0          900    France   Male   25       3    90000              2   \n",
        "\n",
        "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
        "0          1               1            50000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -294,12 +313,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>600</td>\n",
+       "      <td>900</td>\n",
        "      <td>France</td>\n",
        "      <td>1</td>\n",
-       "      <td>40</td>\n",
+       "      <td>25</td>\n",
        "      <td>3</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>90000</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -311,13 +330,13 @@
       ],
       "text/plain": [
        "   CreditScore Geography  Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
-       "0          600    France       1   40       3    60000              2   \n",
+       "0          900    France       1   25       3    90000              2   \n",
        "\n",
        "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
        "0          1               1            50000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -371,11 +390,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>600</td>\n",
+       "      <td>900</td>\n",
        "      <td>1</td>\n",
-       "      <td>40</td>\n",
+       "      <td>25</td>\n",
        "      <td>3</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>90000</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -390,7 +409,7 @@
       ],
       "text/plain": [
        "   CreditScore  Gender  Age  Tenure  Balance  NumOfProducts  HasCrCard  \\\n",
-       "0          600       1   40       3    60000              2          1   \n",
+       "0          900       1   25       3    90000              2          1   \n",
        "\n",
        "   IsActiveMember  EstimatedSalary  Geography_France  Geography_Germany  \\\n",
        "0               1            50000               1.0                0.0   \n",
@@ -399,7 +418,7 @@
        "0              0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,18 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.53598516,  0.91324755,  0.10479359, -0.69539349, -0.25781119,\n",
+       "array([[ 2.57733415,  0.91324755, -1.32129295, -0.69539349,  0.2225185 ,\n",
        "         0.80843615,  0.64920267,  0.97481699, -0.87683221,  1.00150113,\n",
        "        -0.57946723, -0.57638802]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,23 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 94ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.02973952]], dtype=float32)"
+       "array([[0.00916329]], dtype=float32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,16 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.029739516"
+       "np.float32(0.009163287)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
